<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lang"
    android:orientation="vertical"
    android:background="@drawable/white">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="367dp"
        android:layout_height="123dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/luciolebolditalic"
        android:text="@string/choose_language"
        android:textColor="#006600"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="150dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="441dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button2"
            android:layout_width="277dp"
            android:layout_height="120dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTint="#C3FDB8"
            android:text="@string/marathi"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="InefficientWeight,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/eng"
            android:layout_width="277dp"
            android:layout_height="120dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#C3FDB8"
            android:text="@string/english"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="277dp"
            android:layout_height="120dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#C3FDB8"
            android:text="@string/hindi"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>