<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b1dd9e"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/mainlogo"
            tools:ignore="ContentDescription"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail_address1"
            android:textColorHint="@color/black"
            android:padding="16dp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_corner"
            android:id="@+id/email_edittext"
            tools:ignore="Autofill"
            android:fontFamily=""/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password1"
            android:textColorHint="@color/black"
            android:padding="16dp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:background="@drawable/rounded_corner"
            android:id="@+id/password_edittext"
            tools:ignore="Autofill"/>

        <View android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/black"
            android:padding="16dp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:background="@drawable/rounded_corner"
            android:id="@+id/confirm_password_edittext"
            tools:ignore="Autofill"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/create_account"
            android:id="@+id/create_account_btn"
            android:fontFamily="@font/luciolebolditalic"
            android:backgroundTint="#006600"/>

        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="60dp"
            android:id="@+id/progress_bar"
            android:visibility="gone"
            android:indeterminateTint="@color/white"/>

        <View android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/goto_login_btn"/>
    </LinearLayout>
</LinearLayout>