<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/designer"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/mainlogo"
            tools:ignore="ContentDescription"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail_address"
            android:textColorHint="@color/black"
            android:padding="16dp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_corner"
            android:id="@+id/email_edit_text"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:padding="16dp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:background="@drawable/rounded_corner"
            android:id="@+id/password_edittext"
            tools:ignore="Autofill" />


        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <androidx.appcompat.widget.AppCompatButton android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:id="@+id/login_btn"
            android:fontFamily="@font/luciolebolditalic"
            android:backgroundTint="#006600"/>

        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="60dp"
            android:id="@+id/progress_bar"
            android:visibility="gone"
            android:indeterminateTint="@color/white"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/goto_signup_btn"/>
    </LinearLayout>
</LinearLayout>